# context-engine

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  DESIGN_RULE.md  README.md  README_CN.md  findings.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  prompt.md  task_plan.md  tsconfig.json
.claude/: package-manager.json
.claude/skills/context-engineering/: SKILL.md
.claude/skills/di-framework/: SKILL.md
.claude/skills/di-framework/references/: controllers.md  lifecycle.md  providers.md  scopes.md
.claude/skills/ink-patterns/: SKILL.md
.claude/skills/ink-patterns/references/: development-manual.md  implementation-principles.md  usage-guide.md
.claude/skills/llm-service/: SKILL.md
.claude/skills/prompt-renderer/: SKILL.md
.claude/skills/prompt-renderer/references/: ARCHITECTURE.md  BROWSER.md  RECONCILER.md  ROUTER.md
.claude/skills/react-patterns/: SKILL.md
.claude/skills/react-patterns/references/: advanced.md  core-packages.md  dev-tools.md  testing.md  utilities.md
apps/api/: README.md  findings.md  package.json  progress.md  task_plan.md  tsconfig.json  tsup.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/api/migrations/: 000_create_better_auth_schema.sql  001_create_git_schema.sql  001_create_marketplace_schema.sql  001_create_messages_and_api_keys.sql  002_create_bug_reports_schema.sql  002_seed_providers.sql  README.md
apps/api/src/: browser.ts  d1.ts  durable.ts  index.ts  index.worker.integration.test.ts  kv.ts  queue.ts  r2.ts  tokens.ts  verify-metadata.ts
apps/api/src/auth/: better-auth.config.test.ts  better-auth.config.ts  require-auth.decorator.ts  session-auth.ts  session.token.ts
apps/api/src/controllers/: api-key.controller.ts  auth.controller.routes.test.ts  auth.controller.test.ts  auth.controller.ts  bug-report.controller.test.ts  bug-report.controller.ts  git.controller.ts  marketplace.controller.routes.test.ts  marketplace.controller.test.ts  marketplace.controller.ts  mcp.controller.test.ts  mcp.controller.ts  message.controller.ts  page.controller.ts
apps/api/src/entities/: Branch.ts  Commit.ts  File.ts  FileVersion.ts  OAuthToken.ts  RemoteConnection.ts  RemoteProvider.ts  Repository.ts  SyncTask.ts  WebhookEvent.ts  api-key.entity.ts  bug-report.entity.ts  index.ts  message.entity.ts  plugin-install.entity.ts  plugin-review.entity.ts  plugin-version.entity.ts  plugin.entity.ts
apps/api/src/logging/: api-log-level.ts
apps/api/src/mcp/: json-rpc.test.ts  json-rpc.ts  resource-renderer.test.ts  resource-renderer.ts  server.ts  session-durable-object.ts  tool-executor.test.ts  tool-executor.ts
apps/api/src/middleware/: api-key-auth.test.ts  api-key-auth.ts  injector.ts
apps/api/src/modules/: app.module.integration.test.ts  app.module.ts  (+9 more)
apps/cli/: .env.example  README.md  findings.md  package.json  progress.md  task_plan.md  test-mcp-connection-simple.ts  test-mcp-connection.ts  tsconfig.json  tsup.config.ts
apps/cli/src/: cli.module.ts  index.ts  main.ts  prompt.md  router.market.test.ts  router.tsx  tokens.ts
docs/: CONTRIB.md  RUNBOOK.md  framework-extraction-convention.md
rust-cli-agent/: Cargo.toml
rust-cli-agent/cargos/cli/: Cargo.toml  README.md
rust-cli-agent/cargos/cli/src/: cli.rs  lib.rs  main.rs  output.rs
rust-cli-agent/cargos/cli/src/commands/: config.rs  daemon.rs  mod.rs  power.rs  run.rs  schedule.rs  voice.rs
rust-cli-agent/cargos/command-executor/: Cargo.toml
rust-cli-agent/cargos/command-executor/src/: lib.rs
rust-cli-agent/cargos/config/: Cargo.toml
rust-cli-agent/cargos/config/src/: lib.rs
rust-cli-agent/cargos/core/: Cargo.toml
rust-cli-agent/cargos/core/src/: lib.rs
rust-cli-agent/cargos/core/src/command/: executor.rs  mod.rs  result.rs
rust-cli-agent/cargos/core/src/file/: events.rs  mod.rs
rust-cli-agent/cargos/core/src/power/: mod.rs
rust-cli-agent/cargos/core/src/schedule/: mod.rs  model.rs
rust-cli-agent/cargos/core/src/voice/: mod.rs
rust-cli-agent/cargos/events/: Cargo.toml
rust-cli-agent/cargos/events/src/: lib.rs
rust-cli-agent/cargos/filesystem/: Cargo.toml  README.md
rust-cli-agent/cargos/filesystem/examples/: basic_watcher.rs  multi_path_watcher.rs
rust-cli-agent/cargos/filesystem/src/: lib.rs
rust-cli-agent/cargos/platform/: Cargo.toml
rust-cli-agent/cargos/platform/src/: lib.rs
rust-cli-agent/cargos/power-management/: Cargo.toml
rust-cli-agent/cargos/power-management/src/: lib.rs
rust-cli-agent/cargos/storage/: Cargo.toml  README.md
rust-cli-agent/cargos/storage/src/: error.rs  json_storage.rs  lib.rs  memory_storage.rs  sled_storage.rs  trait.rs
rust-cli-agent/cargos/system-scheduler/: Cargo.toml
rust-cli-agent/cargos/system-scheduler/src/: lib.rs  linux.rs  macos.rs  scheduler.rs  unsupported.rs  windows.rs
rust-cli-agent/cargos/task-scheduler/: Cargo.toml  README.md
rust-cli-agent/cargos/task-scheduler/src/: cron_scheduler.rs  error.rs  hooks.rs  lib.rs  llm.rs  persistent_scheduler.rs  scheduler.rs  storage.rs  system_integration.rs  types.rs
rust-cli-agent/cargos/voice-assistant/: Cargo.toml  README.md
rust-cli-agent/cargos/voice-assistant/src/: config.rs  error.rs  lib.rs  stt.rs  tts.rs
triangle-geometry/: GEOMETRY_EXPANSION_DESIGN.md  eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
triangle-geometry/docs/: GEOMETRY_EXPANSION_DESIGN.md  IMPLEMENTATION_ROADMAP.md  README.md  UI_UX_DESIGN.md
triangle-geometry/src/: App.tsx  index.css
triangle-geometry/src/canvas/: CanvasStage.tsx
triangle-geometry/src/engine/: auxiliary-lines.ts  congruence.ts  geometry.ts  intersecting-parallel.ts  similarity.ts  special-points.ts  triangle-properties.ts  trigonometry.ts
triangle-geometry/src/hooks/: use-canvas-interaction.ts
triangle-geometry/src/lib/: constants.ts  coordinate-transform.ts  i18n.ts
triangle-geometry/src/store/: canvas-store.ts  history-store.ts  module-store.ts  shape-store.ts  triangle-store.ts
triangle-geometry/src/types/: canvas.ts  geometry-base.ts  geometry.ts  module.ts  properties.ts  quiz.ts  shapes.ts
(+233 files in other folders)
