[package]
name = "filesystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
events = { workspace = true }
platform = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
