[package]
name = "task-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { workspace = true }
tracing = { workspace = true }
system-scheduler = { path = "../system-scheduler" }

[dev-dependencies]
tempfile = "3.8"
